--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,23 @@ figcaption {
 #details a:active {
   color: red;
 }
+
+img, video, audio, iframe, table, form {
+  width: 100%; /* IE */
+  max-width: 100%; /* FF, Safari, Chrome */
+  }
+
+/*///////// LAYOUT STYLES /////////*/
+
+.row {
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
